<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/LayoutOutput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@id/LayoutInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@id/tvOutput"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvOutput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/LayoutInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/btn0"
            style="@style/Widget.Calculator.Button0"
            android:text="@string/_0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnDot"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnDot"
            style="@style/Widget.Calculator.Button"
            android:layout_width="wrap_content"
            android:text="@string/Dot"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnEqual" />

        <Button
            android:id="@+id/btn1"
            style="@style/Widget.Calculator.Button"
            android:text="@string/_1"
            app:layout_constraintBottom_toTopOf="@+id/btn0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn2"
            style="@style/Widget.Calculator.Button"
            android:text="@string/_2"
            app:layout_constraintBottom_toTopOf="@+id/btn0"
            app:layout_constraintEnd_toStartOf="@+id/btnDot"
            app:layout_constraintStart_toEndOf="@+id/btn1" />

        <Button
            android:id="@+id/btn3"
            style="@style/Widget.Calculator.Button"
            android:text="@string/_3"
            app:layout_constraintBottom_toTopOf="@+id/btnDot"
            app:layout_constraintEnd_toStartOf="@+id/btnPlus"
            app:layout_constraintStart_toEndOf="@+id/btn2" />

        <Button
            android:id="@+id/btn4"
            style="@style/Widget.Calculator.Button"
            android:layout_marginBottom="24dp"
            android:text="@string/_4"
            app:layout_constraintBottom_toTopOf="@id/btn1"
            app:layout_constraintEnd_toEndOf="@+id/btn1"
            app:layout_constraintStart_toStartOf="@+id/btn1" />

        <Button
            android:id="@+id/btn5"
            style="@style/Widget.Calculator.Button"
            android:text="@string/_5"
            app:layout_constraintBottom_toBottomOf="@+id/btn4"
            app:layout_constraintEnd_toEndOf="@+id/btn2"
            app:layout_constraintStart_toStartOf="@+id/btn2"
            app:layout_constraintTop_toTopOf="@+id/btn4" />

        <Button
            android:id="@+id/btn6"
            style="@style/Widget.Calculator.Button"
            android:text="@string/_6"
            app:layout_constraintBottom_toBottomOf="@+id/btn5"
            app:layout_constraintEnd_toEndOf="@+id/btn3"
            app:layout_constraintStart_toStartOf="@+id/btn3"
            app:layout_constraintTop_toTopOf="@+id/btn5" />

        <Button
            android:id="@+id/btn7"
            style="@style/Widget.Calculator.Button"
            android:layout_marginBottom="15dp"
            android:text="@string/_7"
            app:layout_constraintBottom_toTopOf="@+id/btn4"
            app:layout_constraintEnd_toEndOf="@+id/btn4"
            app:layout_constraintStart_toStartOf="@+id/btn4" />

        <Button
            android:id="@+id/btn8"
            style="@style/Widget.Calculator.Button"
            android:text="@string/_8"
            app:layout_constraintBottom_toBottomOf="@+id/btn7"
            app:layout_constraintEnd_toEndOf="@+id/btn5"
            app:layout_constraintStart_toStartOf="@+id/btn5"
            app:layout_constraintTop_toTopOf="@+id/btn7" />

        <Button
            android:id="@+id/btn9"
            style="@style/Widget.Calculator.Button"
            android:text="@string/_9"
            app:layout_constraintBottom_toBottomOf="@+id/btn8"
            app:layout_constraintEnd_toEndOf="@+id/btn6"
            app:layout_constraintStart_toStartOf="@+id/btn6"
            app:layout_constraintTop_toTopOf="@+id/btn8" />

        <Button
            android:id="@+id/btnEqual"
            style="@style/Widget.Calculator.FunctionalButton"
            android:text="@string/Equal"
            app:layout_constraintBottom_toBottomOf="@+id/btnDot"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnDot" />

        <Button
            android:id="@+id/btnPlus"
            style="@style/Widget.Calculator.FunctionalButton"
            android:text="@string/Plus"
            app:layout_constraintBottom_toTopOf="@+id/btnEqual"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnMinus"
            style="@style/Widget.Calculator.FunctionalButton"
            android:text="@string/Minus"
            app:layout_constraintBottom_toBottomOf="@+id/btn6"
            app:layout_constraintEnd_toEndOf="@+id/btnPlus"
            app:layout_constraintStart_toStartOf="@+id/btnPlus"
            app:layout_constraintTop_toTopOf="@+id/btn6" />

        <Button
            android:id="@+id/btnMultiply"
            style="@style/Widget.Calculator.FunctionalButton"
            android:text="@string/x"
            app:layout_constraintBottom_toBottomOf="@+id/btn9"
            app:layout_constraintEnd_toEndOf="@+id/btnMinus"
            app:layout_constraintStart_toStartOf="@+id/btnMinus"
            app:layout_constraintTop_toTopOf="@+id/btn9" />

        <Button
            android:id="@+id/btnDivide"
            style="@style/Widget.Calculator.FunctionalButton"
            android:text="@string/Divide"
            app:layout_constraintBottom_toBottomOf="@+id/btnModulo"
            app:layout_constraintEnd_toEndOf="@+id/btnMultiply"
            app:layout_constraintStart_toStartOf="@+id/btnMultiply"
            app:layout_constraintTop_toTopOf="@+id/btnModulo" />

        <Button
            android:id="@+id/btnClear"
            style="@style/Widget.Calculator.SpecialButton"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="100dp"
            android:text="@string/clear"
            app:layout_constraintBottom_toTopOf="@id/btn7"
            app:layout_constraintEnd_toEndOf="@id/btn7"
            app:layout_constraintStart_toStartOf="@id/btn7" />


        <Button
            android:id="@+id/btnPow"
            style="@style/Widget.Calculator.SpecialButton"
            android:text="@string/pow"
            app:layout_constraintBottom_toBottomOf="@id/btnClear"
            app:layout_constraintEnd_toEndOf="@id/btn8"
            app:layout_constraintStart_toStartOf="@id/btn8"
            app:layout_constraintTop_toTopOf="@id/btnClear" />

        <Button
            android:id="@+id/btnModulo"
            style="@style/Widget.Calculator.SpecialButton"
            android:text="@string/Modulo"
            app:layout_constraintBottom_toBottomOf="@id/btnPow"
            app:layout_constraintEnd_toEndOf="@id/btn9"
            app:layout_constraintStart_toStartOf="@id/btn9"
            app:layout_constraintTop_toTopOf="@id/btnPow" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

